# qtd

./: .clang-tidy  .gitignore  CMakeLists.txt  COPYRIGHT.asc  DEV.md  README.md
.githooks/: pre-commit
.github/workflows/: continuous-integration.yml
resources/fonts/: CMakeLists.txt  README.md
resources/sql/generic/: add_tag_association.sql  create_dependency.sql  create_tables.sql  create_tag.sql  create_task.sql  delete_dangling_task.sql  delete_dependency.sql  delete_tags.sql  delete_tasks_without_parent.sql  remove_tag_association.sql  select_dependencies.sql  select_tag_assignments.sql  select_tags.sql  select_tasks.sql  update_tag.sql  update_task.sql
scripts/: run_linter_on_all_files.sh  run_linter_on_changed_files.sh  verify_license_headers.sh  verify_no_include_guards.sh  verify_no_quuid_usage.sh  verify_test_coverage.sh
src/app/: CMakeLists.txt  LineEdit.qml  Main.qml  SelectableTreeView.qml  SelectableTreeViewDelegate.qml  TagEditor.qml  TagForm.qml  TagOutline.qml  TaskPage.qml  globaleventfilter.cpp  globaleventfilter.h  main.cpp  qmlinterface.cpp  qmlinterface.h  util.cpp  util.h
src/app/backend/: CMakeLists.txt
src/app/backend/dataitems/: qtdid.cpp  qtdid.h  qtditemdatarole.cpp  qtditemdatarole.h  tag.cpp  tag.h  task.cpp  task.h  treenode.cpp  treenode.h  uniquedataitem.cpp  uniquedataitem.h
src/app/backend/models/: filteredtagitemmodel.cpp  filteredtagitemmodel.h  filteredtaskitemmodel.cpp  filteredtaskitemmodel.h  flatteningproxymodel.cpp  flatteningproxymodel.h  mainpagemodelfilter.cpp  mainpagemodelfilter.h  tagitemmodel.cpp  tagitemmodel.h  taskitemmodel.cpp  taskitemmodel.h  treeitemmodel.cpp  treeitemmodel.h
src/app/backend/repositories/: sqlresultiterator.h  sqlresultview.h  tagrepository.cpp  tagrepository.h  taskrepository.cpp  taskrepository.h  transactionalrepository.cpp  transactionalrepository.h
src/app/backend/utils/: containerutils.h  initialize.cpp  initialize.h  modeliteration.cpp  modeliteration.h  query_utilities.cpp  query_utilities.h
src/app/frontend/: Main.qml
src/app/frontend/components/: LineEdit.qml  SelectableTreeView.qml  SelectableTreeViewDelegate.qml  TagEditor.qml  TagForm.qml  TagOutline.qml  TaskPage.qml
src/app/frontend/globalstyle/: GlobalStyle.qml
src/app/model/: CMakeLists.txt  TagItemModel.cpp  TagItemModel.h  filteredtagitemmodel.cpp  filteredtagitemmodel.h  filteredtaskitemmodel.cpp  filteredtaskitemmodel.h  flatteningproxymodel.cpp  flatteningproxymodel.h  model_constants.h  settings.cpp  settings.h  tag.cpp  tag.h  tagitemmodel.cpp  tagitemmodel.h  task.cpp  task.h  taskitemmodel.cpp  taskitemmodel.h  treeitem.cpp  treeitem.h  treeitemmodel.cpp  treeitemmodel.h  treenode.cpp  treenode.h  uniquedataitem.cpp  uniquedataitem.h
src/qmltexteditor/: CMakeLists.txt  ChoiceButton.qml  TextEditor.qml  textformatter.cpp  textformatter.h
test/: testhelpers.cpp  testhelpers.h
test/ModelTests/: CMakeLists.txt  persistedtreeitemmodelstestbase.cpp  persistedtreeitemmodelstestbase.h  testfilteredtagitemmodel.cpp  testfilteredtagitemmodel.h  testfilteredtaskitemmodel.cpp  testfilteredtaskitemmodel.h  testflatteningproxymodel.cpp  testflatteningproxymodel.h  testmodelwrappers.h  testtagitemmodel.cpp  testtagitemmodel.h  testtagitemmodels.cpp  testtagitemmodels.h  testtagmodels.cpp  testtagmodels.h  testtaskitemmodels.cpp  testtaskitemmodels.h  testtreeitemmodel.cpp  testtreeitemmodel.h  testtreeitems.cpp  testtreeitems.h  testtreenodes.cpp  testtreenodes.h
test/backend/: CMakeLists.txt  persistedtreeitemmodelstestbase.cpp  persistedtreeitemmodelstestbase.h  testfilteredtagitemmodel.cpp  testfilteredtagitemmodel.h  testfilteredtaskitemmodel.cpp  testfilteredtaskitemmodel.h  testmodelwrappers.h  testqmlinterface.cpp  testqmlinterface.h  testqtdid.cpp  testqtdid.h  testtagitemmodels.cpp  testtagitemmodels.h  testtaskitemmodels.cpp  testtaskitemmodels.h  testtreeitemmodel.cpp  testtreeitemmodel.h  testtreenodes.cpp  testtreenodes.h
test/frontend/: util.js
test/frontend/component/: CMakeLists.txt  test_components.cpp  tst_choice_button.qml  tst_tag_editor.qml  tst_text_editor.qml
test/frontend/journey/: CMakeLists.txt
test/resources/sql/generic/: populate_database.sql
