CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(qtd VERSION 0.1 LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_CUSTOM_TARGET(COMPILE-DATABASE ALL
    ${CMAKE_COMMAND} -E copy
        ${CMAKE_BINARY_DIR}/compile_commands.json
        ${CMAKE_BINARY_DIR}/../
)
FIND_PACKAGE(Qt6 REQUIRED COMPONENTS Widgets Core Gui Quick QuickControls2 Sql Test)

QT_STANDARD_PROJECT_SETUP(REQUIRES 6.7)


FILE(GLOB_RECURSE RESOURCE_FILES
     LIST_DIRECTORIES false
     CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/resources/*.sql")

ADD_SUBDIRECTORY(src/qmltexteditor)
ADD_SUBDIRECTORY(src/app)
ADD_SUBDIRECTORY(test/ModelTests)

QT_ADD_RESOURCES(
    qtd "resources"
    PREFIX "/"
    BASE "${CMAKE_CURRENT_SOURCE_DIR}"
    FILES ${RESOURCE_FILES}
)
